# scmu

scmu-mobile/: build.gradle.kts  settings.gradle
scmu-mobile/app/: build.gradle  build.gradle.kts
scmu-mobile/app/src/androidTest/java/xyz/xploited/scmumobile/: ExampleInstrumentedTest.kt
scmu-mobile/app/src/main/: AndroidManifest.xml
scmu-mobile/app/src/main/java/xyz/xploited/scmumobile/: MainActivity.kt  MobileApplication.kt
scmu-mobile/app/src/main/java/xyz/xploited/scmumobile/common/: StateResult.kt
scmu-mobile/app/src/main/java/xyz/xploited/scmumobile/database/: MobileDatabase.kt
scmu-mobile/app/src/main/java/xyz/xploited/scmumobile/database/dao/: DeviceDao.kt
scmu-mobile/app/src/main/java/xyz/xploited/scmumobile/screen/: Screen.kt
scmu-mobile/app/src/main/res/values/: strings.xml  themes.xml
scmu-mobile/app/src/test/java/xyz/xploited/scmumobile/: ExampleUnitTest.kt
scmu-mobile/gradle/wrapper/: gradle-wrapper.properties
scmu-server/: build.gradle.kts  settings.gradle.kts
scmu-server/src/main/kotlin/xyz/xploited/: Application.kt
scmu-server/src/main/kotlin/xyz/xploited/plugins/: Routing.kt
scmu-server/src/main/kotlin/xyz/xploited/websocket/: Connection.kt  ConnectionHandler.kt  Routing.kt
scmu-server/src/test/kotlin/xyz/xploited/: ApplicationTest.kt
scmu-ubiquitous/: Cargo.toml
scmu-ubiquitous/src/: main.rs  util.rs  wifi.rs
scmu-ubiquitous/src/bt/: mod.rs
scmu-ubiquitous/src/bt/services/: wifi.rs
scmu-ubiquitous/src/gpio/: mod.rs  particle_matter.rs  rain.rs
scmu-ubiquitous/src/wifi/: mod.rs  worker.rs
(+14 files in other folders)
