[package]
name = "scmu-ubiquitous"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rppal = "0.13.1"
dbus = "0.9.5"
bluer = { version = "0.15.0", features = ["full"] }
tokio = { version = "1.18.1", features = ["full"] }
futures = "0.3"
uuid = "1.0.0"
rmp-serde = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.5"
tungstenite = "0.17.2"
url = "2.2.2"

[dependencies.network-manager]
git = "https://github.com/xploitedd/network-manager"
version = "0.12.0"